--- a/settings/project.json
+++ b/settings/project.json
@@ -3,6 +3,23 @@
   "collision-matrix": [
     [
       true
+    ],
+    [
+      false,
+      false,
+      true
+    ],
+    [
+      false,
+      true,
+      false,
+      true
+    ],
+    [
+      false,
+      false,
+      true,
+      false
     ]
   ],
   "design-resolution-height": 720,
@@ -21,7 +38,10 @@
   "fit-height": true,
   "fit-width": false,
   "group-list": [
-    "default"
+    "default",
+    "Stone",
+    "Mobs",
+    "DropItem"
   ],
   "last-module-event-record-time": 1747638809455,
   "simulator-orientation": false,
